[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/bt/play buton.png" type="Texture" id=1]
[ext_resource path="res://assets/bg/bg.jpg" type="Texture" id=2]
[ext_resource path="res://assets/font/nokiafc22.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/Dead (1).png" type="Texture" id=4]
[ext_resource path="res://assets/music/game_over.wav" type="AudioStream" id=5]
[ext_resource path="res://script/dead.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 3 )

[node name="dead" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ 113.224 ]
}

[node name="music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 110.513, 46.5585 )
stream = ExtResource( 5 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg" type="Sprite" parent="CanvasLayer"]
position = Vector2( 240.656, 362.43 )
texture = ExtResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 208.773, 482.759 )
scale = Vector2( 0.196298, 0.197082 )
normal = ExtResource( 1 )

[node name="voce morreu" type="Label" parent="CanvasLayer"]
margin_left = 13.0
margin_top = 47.0
margin_right = 477.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "VocÃª Morreu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last" type="Label" parent="CanvasLayer"]
margin_left = 45.1622
margin_top = 149.64
margin_right = 387.162
margin_bottom = 304.64
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "LAST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best" type="Label" parent="CanvasLayer"]
margin_left = 43.5227
margin_top = 221.0
margin_right = 385.523
margin_bottom = 376.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "BEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_score" type="Label" parent="CanvasLayer"]
margin_left = 257.738
margin_top = 193.559
margin_right = 365.738
margin_bottom = 259.559
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="CanvasLayer"]
margin_left = 258.738
margin_top = 260.973
margin_right = 366.738
margin_bottom = 326.973
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play again" type="Label" parent="CanvasLayer"]
margin_left = 15.2792
margin_top = 337.992
margin_right = 476.279
margin_bottom = 537.992
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.972549, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "Jogar Novamente"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dead (1)" type="Sprite" parent="CanvasLayer"]
position = Vector2( 112.619, 604.872 )
scale = Vector2( 0.283565, 0.283565 )
texture = ExtResource( 4 )
[connection signal="pressed" from="CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
